deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  labels:
    app: pocketbase
spec:
  selector:
    app: pocketbase
  ports:
    - name: http
      port: 8090
      targetPort: 8090
